Actualizaciones de todas las clases de la V3 correcciones